[package]
name = "whisper-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fixed"
path = "src/fixed/main.rs"

[[bin]]
name = "vad"
path = "src/vad/main.rs"


[dependencies]
rodio = { version = "0.20.1", features = ["wav"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.31"
dirs = "6.0.0"

kalosm-common = { git = "https://github.com/floneum/floneum", rev = "84c0ab8", features = ["metal"] }
kalosm-sound = { git = "https://github.com/floneum/floneum", rev = "84c0ab8", features = ["metal"] }
kalosm-streams = { git = "https://github.com/floneum/floneum", rev = "84c0ab8" }
rwhisper = { git = "https://github.com/floneum/floneum", rev = "84c0ab8", features = ["metal"] }
